<resources>
    <string name="app_name">CleanCity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <string name="register_text">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="name_text">Name</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="existing_account_text">Already have an account?</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="title_activity_create_issue">CreateIssueActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_issue_text">New Issue</string>
    <string name="title_text">Title</string>
    <string name="description_text">Description</string>
    <string name="submit_text">Submit</string>
    <string name="edit_issue_text">Edit Issue</string>
    <string name="delete_issue_text">Delete Issue</string>
    <string name="issue_title_text">Issue Title</string>
    <string name="sample_description_text">Sample description here</string>
    <string name="add_image_text">Add Image</string>
    <string name="no_selected_picture_text">No picture currently selected</string>
    <string name="issue_photo_desc_text">Issue photo</string>
    <string name="delete_photo_text">Delete photo</string>
    <string name="fullscreen_image_text">Fullscreen image</string>
</resources>