<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:orientation="vertical">
    
    <LinearLayout
        style="@style/linearVerticalParent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="35dp">

        <TextView
            style="@style/PageTitleText"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/login_text"/>

        <EditText
            android:id="@+id/loginEmail"
            style="@style/editProfileText"
            android:hint="@string/email_text"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/loginPassword"
            style="@style/editProfileText"
            android:text="@string/password_text"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginSubmitButton"
            style="@style/mediumRoundButton"
            android:layout_width="323dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:onClick="performButtonFunctionalities"
            android:text="@string/login_text" />

        <TextView
            style="@style/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/no_account_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerRedirectButton"
            style="@style/mediumRoundButton"
            android:layout_width="157dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:onClick="performButtonFunctionalities"
            android:text="@string/register_text" />

    </LinearLayout>
    
</LinearLayout>