<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateIssueActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:id="@+id/issueCreateBackButton"
                android:background="@drawable/selectable_back_button"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:onClick="performButtonFunctionalities" />

            <ImageView
                android:id="@+id/issueCreateAddPictureButton"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_baseline_add_photo_alternate_24"
                android:contentDescription="@string/add_image_text"
                android:onClick="performButtonFunctionalities" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/issueCreateHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_issue_text"
            style="@style/PageTitleText"
            android:layout_marginBottom="15dp" />

        <TextView
            android:id="@+id/issueCreateNoImageSelected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/no_selected_picture_text"
            android:textColor="@color/containerColor"
            android:gravity="center"/>

        <include android:id="@+id/issuePictureLayout"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/issue_create_edit_photo_layout"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/issueCreateTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/issueCreateDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/issueSubmitButton"
            style="@style/mediumRoundButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/submit_text"
            android:onClick="performButtonFunctionalities" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>